--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
 
         <a href="#" class="correo">Contactame</a>
-        <h1 class="text_1">software engineer</h1>
+        <br>
+        <div class="rgb">
+        <h1 class="text_1">Software engineer</h1>
+        </div>
           <h2 class="text_2">Jesus Ventura</h2>
           <p style="color: #ffffff; font-size: 22px;" >Learning</p>
 
